--- a/src/components/App.css
+++ b/src/components/App.css
@@ -17,7 +17,7 @@
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
@@ -26,6 +26,13 @@
 
 .App-link {
   color: #61dafb;
+}
+
+.bg_image{
+  background-image: url('C:/Users/Akshay/Downloads/tour.jpg');
+  background-size: cover;
+  height: 100vh;
+  color: #f5f5f5;
 }
 
 @keyframes App-logo-spin {
